cluster/apps/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      hostNetwork: true
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
